chore: Use OpenRewrite to migrate code to Java 21